--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ colorama==0.4.5
 Deprecated==1.2.13
 Flask==2.2.2
 Flask-SocketIO==5.2.0
+gunicorn==20.1.0
 importlib-metadata==4.12.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
