--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ click==8.1.3
 colorama==0.4.5
 Deprecated==1.2.13
 Flask==2.2.2
+Flask-Cors==3.0.10
 Flask-SocketIO==5.2.0
 gunicorn==20.1.0
 importlib-metadata==4.12.0
@@ -16,6 +17,7 @@ python-dotenv==0.20.0
 python-engineio==4.3.4
 python-socketio==5.7.1
 redis==4.3.4
+six==1.16.0
 Werkzeug==2.2.2
 wrapt==1.14.1
 zipp==3.8.1
