--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ hiredis==2.0.0
 importlib-metadata==4.12.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
+jsons==1.6.3
 MarkupSafe==2.1.1
 numpy==1.23.2
 packaging==21.3
@@ -43,6 +44,7 @@ six==1.16.0
 types-redis==4.3.14
 types-six==1.16.18
 typing-extensions==4.3.0
+typish==1.9.3
 Werkzeug==2.2.2
 wrapt==1.14.1
 zipp==3.8.1
